-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.1, 4.7.2
Launching a QML program which loads files from the current working directory with an incorrectly capitalized working directory results in 'File name case mismatch' errors.
QtDeclarative makes relative files absolute in 'QDir::currentPath()' if no other baseUrl has been set. If the applications working directory path is now incorrectly capitalized (e.g. via a Shortcut, or if launched from an IDE) it will spill out the above mentioned error.
- relates to
-
QTCREATORBUG-3722 New Qt Quick App Project wizard: File name case mismatch due to case tolerant project location in wizard. (Windows)
-
- Closed
-
- resulted in
-
QTCREATORBUG-6126 Welcome screen empty when launched from Creator
-
- Closed
-
-
QTBUG-28277 QtQuick 2.0 import not found, because of File name mismatch
-
- Closed
-
-
QTCREATORBUG-4592 Qt Quick Application creates "File name case mismatch"
-
- Closed
-
-
QTCREATORBUG-5965 qmlviewer doesn't show main.qml correctly
-
- Closed
-
-
QTIFW-175 "Normalize" installation path on Windows in installer
-
- Closed
-
| For Gerrit Dashboard: QTBUG-17529 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 33415,4 | Don't check for file case errors in base url | master | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |