ApplicationLauncher/Win: Fix capitalization of working directory path

QtDeclarative checks for the capitalization of .qml files. This might fail
for relative pathes if the working directory is not capitalized like on disk
(QTBUG-17529).

Task-number: QTCREATORBUG-3722
Reviewed-by: dt